--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-gtm-module",
+  "name": "@sangzn34/react-gtm-module-onetrust",
   "version": "2.0.12",
   "description": "React Google Tag Manager Module",
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alinemorelli/react-gtm"
+    "url": "https://github.com/sangzn34/react-gtm"
   },
   "author": {
     "name": "Aline Morelli",
