--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sangzn34/react-gtm-module-onetrust",
+  "name": "react-gtm-module-onetrust",
   "version": "2.0.12",
   "description": "React Google Tag Manager Module",
   "main": "dist/index.js",
