--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-gtm-module-onetrust",
-  "version": "2.0.13",
+  "version": "2.0.15",
   "description": "React Google Tag Manager Module",
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
     "jest": "jest",
     "test": "npm run lint && npm run jest",
-    "build": "babel src -d dist --ignore src/__tests__",
+    "build": "tsc",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -42,10 +42,11 @@
     "eslint": "^4.18.2",
     "jest": "^19.0.2",
     "jest-cli": "^21.2.1",
-    "sinon": "^1.14.1"
+    "sinon": "^1.14.1",
+    "typescript": "^4.7.3"
   },
   "jest": {
-    "testRegex": "__tests__.*\\.spec.js$",
+    "testRegex": "__tests__.*\\.spec.ts$",
     "collectCoverage": true
   }
 }
